--- a/themes/portio/layouts/partials/navbar.html
+++ b/themes/portio/layouts/partials/navbar.html
@@ -20,7 +20,12 @@
         {{ end }}
       </ul>
       <div class="navbar-nav">
-        <a href="{{ "contact" | absURL }}" class="btn btn-primary btn-zoom hire_button">Hire Me Now</a>
+        <li class="nav-item text-sm-center p-2 ">
+          <a href="{{ "faq" | absURL }}" class="btn btn-primary btn-zoom hire_button">FAQ</a>
+        </li>
+        <li class="nav-item text-sm-center p-2 ">
+          <a href="{{ "contact" | absURL }}" class="btn btn-primary btn-zoom hire_button">Hire Me Now</a>
+        </li>
       </div>
     </div>
   </div>
