--- a/themes/portio/layouts/contact/list.html
+++ b/themes/portio/layouts/contact/list.html
@@ -25,12 +25,14 @@
     <div class="row">
       <div class="col-12 text-center">
         <h3 class="breadCrumb__title">{{ .Title }}</h3>
+        <!--
         <nav aria-label="breadcrumb" class="d-flex justify-content-center">
           <ol class="breadcrumb align-items-center">
             <li class="breadcrumb-item"><a href="{{ .Site.BaseURL }}">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">{{ .Params.breadcrumb }}</li>
           </ol>
         </nav>
+        -->
       </div>
     </div>
   </div>
@@ -105,6 +107,7 @@
   </div>
 </section>
 
+{{ if .Site.Params.formspreeEnabled }}
 <section class="contact-form">
   <div class="container">
     <div class="row">
@@ -186,5 +189,5 @@
     </div>
   </div>
 </section>
-
+{{ end }}
 {{ end }}
