--- a/themes/portio/layouts/partials/aboutSection.html
+++ b/themes/portio/layouts/partials/aboutSection.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="about_content-thumb-image">
                             <img src="{{ .image | absURL }}" alt="about-img"
-                                style='-webkit-mask: url({{"images/about/about-mask-svg.svg" | absURL}}); -webkit-mask-size: contain;'>
+                                style='-webkit-mask: url({{"images/about/about-mask-svg.svg" | absURL}}) no-repeat; -webkit-mask-size: contain;'>
                         </div>
                     </div>
                     <div class="about_content-inner">
@@ -43,10 +43,14 @@
                             {{ .content | markdownify}}
                         </div>
                         <div>
-                            <a class="btn btn-primary mr-3 btn-zoom"
-                                href="{{ .button1Target | absURL }}">{{ .button1Name }}</a>
-                            <a class="btn btn-outline-primary btn-zoom" href="{{ .button2Target | absURL }}">
-                                {{ .button2Name }} </a>
+                            {{ if .button1Name }}
+                                <a class="btn btn-primary mr-3 btn-zoom"
+                                    href="{{ .button1Target | absURL }}">{{ .button1Name }}</a>
+                            {{ end }}
+                            {{ if .button2Name }}
+                                <a class="btn btn-outline-primary btn-zoom" href="{{ .button2Target | absURL }}">
+                                    {{ .button2Name }} </a>
+                            {{ end }}
                         </div>
                     </div>
                 </div>
