--- a/themes/portio/layouts/partials/blogSection.html
+++ b/themes/portio/layouts/partials/blogSection.html
@@ -8,7 +8,9 @@
 		<div class="row mb-5">
 			<div class="col-lg-6">
 				<div class="blog-preview__header">
-					<span class="top-title pre-line">{{ .topTitle }}</span>
+					{{ if .topTitle }}
+						<span class="top-title pre-line">{{ .topTitle }}</span>
+					{{ end }}
 					{{ .title | markdownify }}
 				</div>
 			</div>
