--- a/themes/portio/layouts/partials/portfolioSection.html
+++ b/themes/portio/layouts/partials/portfolioSection.html
@@ -5,7 +5,9 @@
     <div class="row text-center">
       <div class="col-lg-6 offset-lg-3">
         <div class="portfolio__header mb-5">
-          <span class="top-title">{{ .topTitle }}</span>
+          {{ if .topTitle }}
+            <span class="top-title">{{ .topTitle }}</span>
+          {{ end }}
           {{ .title | markdownify }}
         </div>
       </div>
