Hide the logo temporarily

--- a/themes/portio/layouts/partials/navbar.html
+++ b/themes/portio/layouts/partials/navbar.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <a href="{{ .Site.BaseURL }}" class="navbar-brand">
-      <img src="{{ .Site.Params.logo | absURL }}" alt="site-logo">
-    </a>
+    {{ if .Site.Params.logo }}
+      <a href="{{ .Site.BaseURL }}" class="navbar-brand">
+        <img src="{{ .Site.Params.logo | absURL }}" alt="site-logo">
+      </a>
+    {{ end }}
     <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
       <span class="navbar-toggler-icon"></span>
