--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -36,7 +36,9 @@
 		<div class="row footer__widget">
 			<div class="col-lg-4">
 				<div class="footer__widget_logo mb-5">
-					<img src="{{ .Site.Params.footerLogo | absURL }}" alt="widget-logo">
+					{{ if .Site.Params.footerLogo }}
+						<img src="{{ .Site.Params.footerLogo | absURL }}" alt="widget-logo">
+					{{ end }}
 				</div>
 			</div>
 			<div class="col-lg-4">
