--- a/themes/portio/layouts/partials/aboutSection.html
+++ b/themes/portio/layouts/partials/aboutSection.html
@@ -39,8 +39,10 @@
                                 </g>
                             </svg>
                         </div>
-                        <div class="mb-5 text-light">
+                        <div class="mb-4 text-light">
+                            <div class="text-light">
                             {{ .content | markdownify}}
+                                </div>
                         </div>
                         <div>
                             {{ if .button1Name }}
