--- a/themes/portio/layouts/partials/aboutSection.html
+++ b/themes/portio/layouts/partials/aboutSection.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="about_content-thumb-image">
                             <img src="{{ .image | absURL }}" alt="about-img"
-                                style='-webkit-mask: url({{"images/about/about-mask-svg.svg" | absURL}}) no-repeat; -webkit-mask-size: contain;'>
+                                style='-webkit-mask: url(images/about/about-mask-svg.svg) no-repeat; -webkit-mask-size: contain;'>
                         </div>
                     </div>
                     <div class="about_content-inner">
