--- a/themes/portio/layouts/partials/hero.html
+++ b/themes/portio/layouts/partials/hero.html
@@ -43,7 +43,7 @@
             <img src="images/hero/figure-svg.svg" alt="figure-svg" />
           </div>
           <img src="{{ .image | absURL }}" alt="hero-image" style='
-                  -webkit-mask: url({{"images/hero/hero-mask-svg.png" | absURL }});
+                  -webkit-mask: url(images/hero/hero-mask-svg.png);
                   -webkit-mask-repeat: no-repeat;
                   -webkit-mask-size: contain;
                   -webkit-mask-position: center center;
