--- a/themes/portio/layouts/partials/resumeSection.html
+++ b/themes/portio/layouts/partials/resumeSection.html
@@ -14,8 +14,8 @@
                     </div>
 
                     <div class="btn-group nav mt-5">
-                        <a href="#{{.tab1Target}}" class="btn btn-primary active" data-toggle="tab">{{ .tab1Name }}</a>
-                        <a href="#{{.tab2Target}}" class="btn btn-primary" data-toggle="tab">{{ .tab2Name }}</a>
+                        <a href="#{{.tab1Target}}" title="{{ .tab1Name }}" class="btn btn-primary active" data-toggle="tab">{{ .tab1Name }}</a>
+                        <a href="#{{.tab2Target}}" title="{{ .tab2Name }}" class="btn btn-primary" data-toggle="tab">{{ .tab2Name }}</a>
                     </div>
                 </div>
             </div>
