--- a/themes/portio/layouts/404.html
+++ b/themes/portio/layouts/404.html
@@ -2,7 +2,7 @@
 
 <header class="breadCrumb">
     <div class="svg-img">
-        <img src="{{ "images/hero/figure-svg.svg" | absURL }}" alt="bg">
+        <img src="{{ "images/hero/figure-svg.svg" | absURL }}" alt="figure">
     </div>
     <div class="animate-shape">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 600 600">
@@ -27,7 +27,7 @@
                 <h3 class="breadCrumb__title">{{ .Title }}</h3>
                 <nav aria-label="breadcrumb" class="d-flex justify-content-center">
                   <ol class="breadcrumb align-items-center">
-                      <li class="breadcrumb-item"><span>Return back to <a href="{{ .Site.BaseURL }}">Home</a></span></li>
+                      <li class="breadcrumb-item"><span>Return back to <a href="{{ .Site.BaseURL }}" title="Home">Home</a></span></li>
                   </ol>
                 </nav>
             </div>
