--- a/themes/portio/layouts/_default/terms.html
+++ b/themes/portio/layouts/_default/terms.html
@@ -10,7 +10,7 @@
                 <h3 class="breadCrumb__title">{{ .Title }}</h3>
                 <nav aria-label="breadcrumb" class="d-flex justify-content-center">
                     <ol class="breadcrumb align-items-center">
-                        <li class="breadcrumb-item"><a href="{{ .Site.BaseURL }}">Home</a></li>
+                        <li class="breadcrumb-item"><a href="{{ .Site.BaseURL }}" title="Home">Home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
                     </ol>
                 </nav>
@@ -22,7 +22,7 @@
                     <div class="container">
                         {{ $plural := .Data.Plural }}
                         {{ range $key, $value := .Data.Terms }}
-                        <a href="{{ $baseurl }}/{{ $plural }}/{{ $key }}">{{ $key }}</a>
+                        <a href="{{ $baseurl }}/{{ $plural }}/{{ $key }}" title="{{ $key }}">{{ $key }}</a>
                         <br>
                         {{ end }}
                     </div>
@@ -34,10 +34,10 @@
 
 <section class="section singleBlog">
     <div class="svg-img">
-      <img src={{ "images/hero/figure-svg.svg" | absURL }} alt="">
+      <img src={{ "images/hero/figure-svg.svg" | absURL }} alt="Hero">
     </div>
     <div class="animate-shape">
-      <img src={{ "images/skill/skill-background-shape.svg" | absURL }} alt="">
+      <img src={{ "images/skill/skill-background-shape.svg" | absURL }} alt="bg-shape">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 600 600">
         <defs>
           <linearGradient id="d" x1="0.929" y1="0.111" x2="0.263" y2="0.935" gradientUnits="objectBoundingBox">
