--- a/themes/portio/layouts/blog/list.html
+++ b/themes/portio/layouts/blog/list.html
@@ -3,7 +3,7 @@
 <header class="breadCrumb">
 	<div class="svg-img">
 
-		<img src={{"images/hero/figure-svg.svg" | absURL }} alt="">
+		<img src={{"images/hero/figure-svg.svg" | absURL }} alt="figure">
 	</div>
 	<div class="animate-shape">
 		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 600 600">
@@ -28,7 +28,7 @@
 				<h3 class="breadCrumb__title">{{ .Title }}</h3>
 				<nav aria-label="breadcrumb" class="d-flex justify-content-center">
 					<ol class="breadcrumb align-items-center">
-						<li class="breadcrumb-item"><a href="{{ .Site.BaseURL }}">Home</a></li>
+						<li class="breadcrumb-item"><a href="{{ .Site.BaseURL }}" title="Home">Home</a></li>
 						<li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
 					</ol>
 				</nav>
