--- a/themes/portio/layouts/partials/hero.html
+++ b/themes/portio/layouts/partials/hero.html
@@ -7,7 +7,7 @@
     </svg>
   </div>
   <div class="hero_footer-svg">
-    <img src="images/hero/figure-svg.svg" alt="" />
+    <img src="images/hero/figure-svg.svg" alt="figure" />
   </div>
   <div class="container">
     <div class="row align-items-center">
@@ -55,7 +55,7 @@
               <img src="{{ .videoThumb }}" alt="popup" />
             </div>
 
-            <a href="{{ .videoURL }}" type="button" class="popup-button text-center big">
+            <a href="{{ .videoURL }}" title="Video" type="button" class="popup-button text-center big">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="24" viewBox="0 0 21 24">
                 <path d="M17.961 10.264a2 2 0 010 3.473L2.992 22.29A2 2 0 010 20.554V3.446A2 2 0 012.992 1.71z"
                   data-name="Polygon 4" />
