--- a/themes/portio/layouts/partials/navbar.html
+++ b/themes/portio/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     {{ if .Site.Params.logo }}
-      <a href="{{ .Site.BaseURL }}" class="navbar-brand">
+      <a href="{{ .Site.BaseURL }}" title="Home" class="navbar-brand">
         <img src="{{ .Site.Params.logo | absURL }}" alt="site-logo">
       </a>
     {{ end }}
@@ -16,17 +16,18 @@
         {{ $menu := .Site.Menus.main }}
         {{ range $index, $element := $menu }}
         <li class="nav-item">
-          <a href="{{ $.Site.BaseURL }}{{ .URL }}"
-            class="nav-link text-dark text-sm-center p-2 {{ if $.IsHome }}scroll{{ end }}">{{ .Name }}</a>
+          <a href="{{ $.Site.BaseURL }}{{ .URL }}" title="{{ .Name }}"
+            class="nav-link text-dark text-sm-center p-2 {{ if $.IsHome }}scroll{{ end }}">{{ .Name }}
+          </a>
         </li>
         {{ end }}
       </ul>
       <div class="navbar-nav">
         <li class="nav-item text-sm-center p-2 ">
-          <a href="{{ "faq" | absURL }}" class="btn btn-primary btn-zoom hire_button">FAQ</a>
+          <a href="{{ "faq" | absURL }}" title="Faq" class="btn btn-primary btn-zoom hire_button">FAQ</a>
         </li>
         <li class="nav-item text-sm-center p-2 ">
-          <a href="{{ "contact" | absURL }}" class="btn btn-primary btn-zoom hire_button">Hire Me Now</a>
+          <a href="{{ "contact" | absURL }}" title="Contact" class="btn btn-primary btn-zoom hire_button">Hire Me Now</a>
         </li>
       </div>
     </div>
