--- a/themes/portio/layouts/tags/taxonomy.html
+++ b/themes/portio/layouts/tags/taxonomy.html
@@ -2,7 +2,7 @@
 
 <header class="breadCrumb">
   <div class="svg-img">
-    <img src={{"images/hero/figure-svg.svg" | absURL }} alt="">
+    <img src={{"images/hero/figure-svg.svg" | absURL }} alt="figure">
   </div>
   <div class="animate-shape">
     <svg
@@ -33,8 +33,7 @@
     </svg>
   </div>
   <div class="animate-pattern">
-    <img src={{"images/service/background-pattern.svg" | absURL }}
-    alt="background-shape">
+    <img src={{"images/service/background-pattern.svg" | absURL }} alt="background-shape">
   </div>
   <div class="container">
     <div class="row">
