--- a/themes/portio/assets/bootstrap-4.5.2/site/_includes/analytics.html
+++ b/themes/portio/assets/bootstrap-4.5.2/site/_includes/analytics.html
@@ -1,7 +1,8 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQQE4ZKSQV"></script>
 <script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', 'UA-146052-10', 'getbootstrap.com');
-  ga('set', 'anonymizeIp', true);
-  ga('send', 'pageview');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-MQQE4ZKSQV', { 'anonymize_ip':  true });
 </script>
-<script async src="https://www.google-analytics.com/analytics.js"></script>
