--- a/themes/portio/layouts/partials/head.html
+++ b/themes/portio/layouts/partials/head.html
@@ -31,8 +31,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
-    gtag('config', '{{ . }}');
+    gtag('config', '{{ . }}', { 'anonymize_ip':  true });
   </script>
   {{ end }}
 </head>
