Income tax loophole to end

--- a/themes/portio/assets/scss/components/_single-blog-post.scss
+++ b/themes/portio/assets/scss/components/_single-blog-post.scss
@@ -72,6 +72,37 @@
           }
         }
       }
+      blockquote {
+        display: block;
+        padding: 25px 20px 15px 45px;
+        margin: 0 0 20px;
+        position: relative;
+        text-align: justify;
+        border-left: 7px solid $primary;
+        &::before {
+          content: "\201C";
+          font-size: 60px;
+          font-weight: bold;
+          position: absolute;
+          left: 10px;
+          top: -30px;
+        }
+        &::after {
+          content: "\201C";
+          font-size: 60px;
+          font-weight: bold;
+          position: absolute;
+          right: 18px;
+          bottom: -55px;
+        }
+        a {
+          text-decoration: none;
+          padding: 0 3px;
+        }
+        em {
+          font-style: italic;
+        }
+      }
     }
   }
 }
