--- a/themes/portio/assets/scss/components/_blog.scss
+++ b/themes/portio/assets/scss/components/_blog.scss
@@ -7,6 +7,17 @@
 			height: 100%;
 			overflow: hidden;
 			border-radius: 20px;
+			&-border {
+				width: 90%;
+				height: 100%;
+				overflow: hidden;
+				border-radius: 20px;
+				img {
+					height: 100%;
+					width: 100%;
+					transition: all 0.3s ease;
+				}
+			}
 			@include desktop {
 				width: 80%;
 				margin: 0 auto;
