--- a/themes/portio/layouts/blog/list.html
+++ b/themes/portio/layouts/blog/list.html
@@ -6,7 +6,7 @@
 		<img src={{"images/hero/figure-svg.svg" | absURL }} alt="figure">
 	</div>
 	<div class="animate-shape">
-		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 600 600">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600">
 			<defs>
 				<linearGradient id="d" x1="0.929" y1="0.111" x2="0.263" y2="0.935" gradientUnits="objectBoundingBox">
 					<stop offset="0" stop-color="#f1f6f9" />
@@ -26,12 +26,14 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<h3 class="breadCrumb__title">{{ .Title }}</h3>
+				<!--
 				<nav aria-label="breadcrumb" class="d-flex justify-content-center">
 					<ol class="breadcrumb align-items-center">
 						<li class="breadcrumb-item"><a href="{{ .Site.BaseURL }}" title="Home">Home</a></li>
 						<li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
 					</ol>
 				</nav>
+				-->
 			</div>
 		</div>
 	</div>
@@ -44,7 +46,9 @@
 			<div class="col-lg-4">
 				<div class="blog-page__item">
 					<div class="blog-page__item-thumb">
-						<img src="{{ .Params.featureImage | absURL }}" alt="post-image">
+						<a href="{{ .Permalink }}">
+							<img src="{{ .Params.featureImage | absURL }}" alt="post-image">
+						</a>
 					</div>
 					<div class="blog-page__item-content bg-white">
 						<span class="small">{{ .PublishDate.Format "January 2, 2006" }}</span>
