--- a/themes/portio/layouts/partials/head.html
+++ b/themes/portio/layouts/partials/head.html
@@ -24,6 +24,10 @@
   {{ "<!--Favicon-->" | safeHTML }}
   <link rel="shortcut icon" href="{{ "images/favicon.ico" | absURL }}" type="image/x-icon" />
   <link rel="icon" href="{{ "images/favicon.png" | absURL }}" type="image/x-icon" />
+
+  <!-- Bibliography -->
+  <link rel="stylesheet" type="text/css" href="{{ "/hugo-cite.css" | relURL }}" />
+
   {{ with site.Params.googleAnalytics }}
   {{ "<!-- Google Analytics -->" | safeHTML }}
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
