--- a/themes/portio/layouts/partials/navbar.html
+++ b/themes/portio/layouts/partials/navbar.html
@@ -24,7 +24,7 @@
       </ul>
       <div class="navbar-nav">
         <li class="nav-item text-sm-center p-2 ">
-          <a href="{{ "faq" | absURL }}" title="Faq" class="btn btn-primary btn-zoom hire_button">FAQ</a>
+          <a href="{{ "blog" | absURL }}" title="Blog" class="btn btn-primary btn-zoom hire_button">Blog</a>
         </li>
         <li class="nav-item text-sm-center p-2 ">
           <a href="{{ "contact" | absURL }}" title="Contact" class="btn btn-primary btn-zoom hire_button">Hire Me Now</a>
